Chapter 7 samples - generating static proxy classes - work in progress